# fastapi-mono-stub

./: .env.example  .env.test  .gitignore  .gitlab-ci.yml  README.md  docker-compose.ci-test.yml  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.vscode.yml  docker-compose.yml
caddy/: Caddyfile.prod
deploy/: deploy.prod.sh  deploy.stage.sh
server/: Dockerfile  Dockerfile.stage  alembic.ini  cli.py  main.py  pyproject.toml
server/config/: __init__.py  admin.py  db.py  fastapi.py  lifespan.py  mail.py  middleware.py  routes.py  security.py  settings.py  taskiq.py
server/db/: __init__.py  deps.py  model_importer.py  session.py
server/db/alembic/: env.py
server/migrations/: env.py
server/migrations/versions/: 2024-04-08_f4ea538f33a2_.py  2024-04-12_13aeb5b2c8cc_.py  2024-04-14_4135ad9ade57_.py  2024-04-14_5ca19aa6a38e_.py
server/src/common/commands/: __init__.py  run_server.py  shell.py
server/src/common/exceptions/: __init__.py  confirmation_token.py  declarative.py  object_not_found.py
server/src/common/models/: base.py
server/src/common/services/: __init__.py  confirmation_token.py  model_import.py
server/src/common/tasks/: send_mail.py
server/src/common/types/: __init__.py  model.py
server/src/common/utils/: __init__.py  find_models.py  get_or_404.py
server/src/users/: routes.py
server/src/users/admin/: __init__.py  auth_provider.py  user.py  users.py
server/src/users/commands/: __init__.py  create_admin.py
server/src/users/controllers/: auth.py  login.py  me.py  register.py
server/src/users/dtos/: __init__.py  auth.py  jwt.py  login.py  me.py  refresh.py  register.py
server/src/users/exceptions/: auth.py
server/src/users/models/: user.py
server/src/users/services/: __init__.py  admin_auth.py  auth.py  login.py  register.py
server/src/users/services/auth/: __init__.py  admin_auth.py  login.py  register.py  reset_password.py
server/src/users/utils/: __init__.py  create_jwt_tokens.py  get_jwt_response.py  is_email_exists.py
server/src/users/validators/: __init__.py  email.py
server/templates/mail/: register.html  reset_password.html
server/tests/fixtures/: __init__.py  client.py  db.py
