[tool.poetry]
name = "fastapi-stub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_stub"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
pydantic = {extras = ["email"], version = "^2.6.2"}
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi-jwt = "^0.2.0"
fastapi-mail = "^1.4.1"
taskiq = {extras = ["reload"], version = "^0.11.0"}
taskiq-redis = "^0.5.5"
taskiq-fastapi = "^0.3.1"
jinja2 = "^3.1.3"
passlib = "^1.7.4"
itsdangerous = "^2.1.2"
starlette-admin = {extras = ["i18n"], version = "^0.13.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
